--- a/styles/breakpoints.scss
+++ b/styles/breakpoints.scss
@@ -8,7 +8,7 @@
 	.wheel {
 		width: 100vw;
 		height: 100vh;
-		top: 100%;
+		top: 120%;
 		left: 50%;
 	}
 	.card{
@@ -20,7 +20,8 @@
 		height: 90vw;
 	}
 	.arrows{
-		top: 50%;
+		top: 80%;
+		width: 100vw;
 	}
 	.info{
 		left: -15vw;
