--- a/styles/breakpoints.scss
+++ b/styles/breakpoints.scss
@@ -8,7 +8,7 @@
 	.wheel {
 		width: 100vw;
 		height: 100vh;
-		top: 120%;
+		top: 115%;
 		left: 50%;
 	}
 	.card{
@@ -30,5 +30,9 @@
 		h1 {
 			font-size: 36px;
 		}
+	}
+	.hamburger{
+		width: 50px;
+		height: 50px;
 	}
 }
