--- a/styles/breakpoints.scss
+++ b/styles/breakpoints.scss
@@ -35,4 +35,10 @@
 		width: 50px;
 		height: 50px;
 	}
+	.ReactModal__Overlay {
+		width: 100vw;
+	}
+	.ReactModal__Overlay--after-open {
+		transform: translateX(0);
+	}
 }
