--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -228,7 +228,7 @@ button:active {
 
 .ReactModal__Overlay {
 	opacity: 0;
-	width: 30vw;
+	width: 500px;
 	height: 100vh;
 	position: absolute;
 	top: 0;
@@ -242,7 +242,7 @@ button:active {
 
 .ReactModal__Overlay--after-open {
 	opacity: 1;
-	transform: translateX(70vw);
+	transform: translateX(calc(100vw - 500px));
 }
 
 .ReactModal__Overlay--before-close {
@@ -252,7 +252,7 @@ button:active {
 
 .ReactModal__Content {
 	border: none !important;
-	max-width: 91%;
+	max-width: 100%;
 	height: 100%;
 }
 
