--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,15 +1,14 @@
-@font-face {
-	font-family: 'Inter';
-	src: url('./fonts/Inter.ttf') format('truetype');
-}
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 $black: #000;
 $white: #fff;
-$purple: #7F38DA;
-$blue: #054962;
+$green: #BAFF00;
+
+*{
+	box-sizing: border-box;
+}
 
 body, html{
-	width: 100vw;
 	max-width: 100vw;
 	overflow-x: hidden;
 }
@@ -19,10 +18,19 @@ body {
 	margin: 0;
 	background-color: $black;
 	color: $white;
-	font-family: 'Inter';
+	font-family: "IBM Plex Sans", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
+}
+
+.menu{
+	text-align: right;
+	padding: 10px 2vw;
+	a{
+		font-size: 24px;
+		margin-left: 24px;
+	}
 }
 
 h1{
@@ -46,229 +54,34 @@ p a {
 	color: $white;
 }
 
-
-:root {
-	// --easing: cubic-bezier(0.18, 0.5, 0.8, 1);
-	--easing: ease-in-out;
-	--duration: 1s;
-}
-
-.wheel-wrapper{
-	height: 100vh;
-	width: 100vw;
-	overflow: hidden;
-	bottom: 0;
-	position: absolute;
-}
-
-.wheel {
-	width: 50vw;
-	height: 75vh;
-	position: absolute;
-	top: 110%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	transition: transform var(--duration) var(--easing);
-}
-
-.center-position {
-	width: 15vw;
-	height: 15vw;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.card {
-	width: 15vw;
-	height: auto;
-	height: 22.5vw;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	cursor: pointer;
-	transition: transform var(--duration) var(--easing);
-}
-
-.card.current {
-	z-index: 999;
-	width: 25vw;
-	height: 37.5vw;
-	.info{
-		display: block;
-		opacity: 1;
-		height: 100%;
-	}
-}
-
-.card img {
-	width: 100%;
-	height: 100%;	
-	aspect-ratio: 2 / 3;
-	pointer-events: none;
-}
-
-.arrows {
-	position: absolute;
-	top: 80%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 90vw;
-}
-
-.arrow-right,
-.arrow-left {
-	position: absolute;
-}
-
-.arrow-right {
-	right: 0;
-}
-
-.arrow-left {
-	left: 0;
-}
-
-button {
-	border: none;
-	background: transparent;
-	cursor: pointer;
-	appearance: none;
-	color: white;
-	font-size: 2rem;
-}
-
-button:active {
-	transform: scale(1.5);
-	transition: transform var(--duration) var(--easing);
-}
-
-.info{
-	// display: none;
-	// transition: all var(--duration) ease-in-out;
-	transition: height var(--duration) ease-in-out;
-	opacity: 0;
-	height: 0;
-	overflow: hidden;
-	position: absolute;
-	top: -20vh;
-	left: -35vw;
-	width: 25vw;
-	padding-left: 2vw;
-	padding-top: 2vw;
-	h1{
-		font-size: 52px;
-		line-height: 1;
-		margin: 10px 0;
-	}
-	p{
-		margin: 0;
-		margin-top: 18px;
-		line-height: 1.6;
-	}
-}
-
-.read-more{
-	margin-top: 30px;
-	a{
-		background-color: $white;
-		border-radius: 50px;
-		color: $blue;
-		padding: 5px 20px;
-	}
-}
-
 .container{
-	max-width: 900px;
+	max-width: 1100px;
 	display: block;
 	margin: auto;
 	padding: 14px;
 	margin-top: 48px;
 }
 
-.hamburger {
-	position: fixed;
-	right: 2vw;
-	top: 24px;
-	width: 60px;
-	height: 60px;
-	background-image: url('hamburger.svg');
-	background-size: contain;
-	background-repeat: no-repeat;
-	z-index: 1;
-	cursor: pointer;
-}
-
-.nav-links {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: auto;
-	margin-top: 48px;
-	padding: 2vw;
-
-	.nav-item {
-		margin: 14px 0;
-		border-bottom: 1px solid $white;
-	}
-
-	a {
-		font-size: 48px;
-	}
-}
-
-.close{
-	font-size: 48px;
-	text-align: right;
-	cursor: pointer;
-	margin-right: 2vw;
-}
-
-.ReactModal__Overlay {
-	opacity: 0;
-	width: 500px;
-	height: 100vh;
-	position: absolute;
-	top: 0;
-	right: 0;
-	transform: translateX(100vw);
-	transition: all 500ms ease-in-out;
-	background-color: transparent !important;
-	overflow: hidden;
-	z-index: 8;
-}
-
-.ReactModal__Overlay--after-open {
-	opacity: 1;
-	transform: translateX(calc(100vw - 500px));
-}
-
-.ReactModal__Overlay--before-close {
-	opacity: 0;
-	transform: translateX(100vw);
-}
-
-.ReactModal__Content {
-	border: none !important;
-	max-width: 100%;
-	height: 100%;
-}
-
 .image-text{
 	display: flex;
 	align-items: center;
 	.image{
-		width: 40%;
+		width: 45%;
+		aspect-ratio: 1/1;
 	}
 	.text{
 		width: 55%;
-		max-width: 600px;
 		margin-left: 48px;
-		h1,h2,h3{
-			padding-bottom: 5px;
-			border-bottom: 1px solid $white;
+		p{
+			font-size: 24px;
+		}
+		a{
+			background-color: $green;
+			padding: 2px 20px;
+			border-radius: 25px;
+			text-decoration: none;
+			color: $black;
+			text-transform: uppercase;
 		}
 	}
 }
