--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,10 @@ $green: #BAFF00;
 	box-sizing: border-box;
 }
 
+html{
+	overflow-y: auto;
+}
+
 body, html{
 	max-width: 100vw;
 	overflow-x: hidden;
@@ -24,7 +28,33 @@ body {
 	text-rendering: optimizeLegibility;
 }
 
+/* width */
+::-webkit-scrollbar {
+	height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $green;
+	border-radius: 25px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $green;
+}
+
+
 .menu{
+	position: fixed;
+	width: 100%;
+	z-index: 999;
+	top: 0;
 	text-align: right;
 	padding: 10px 2vw;
 	a{
@@ -33,15 +63,15 @@ body {
 	}
 }
 
-
 .site-title{
+	top: 14px;
 	position: fixed;
-	margin-top: 14px;
 	margin-left: 2vw;
 	width: 100px;
+	max-width: 95vw;
 	height: 50px;
 	mask-image: url(./logo.svg);
-	background-color: $green;
+	background-color: $white;
 	mask-repeat: no-repeat;
 	mask-size: contain;
 	transition: all 0.4s ease;
@@ -57,18 +87,20 @@ body {
 }
 
 .home{
+	overflow-y: hidden;
 	.site-title{
 		z-index: -1;
-		width: 70vw;
+		width: 100vh;
 		height: 100vh;
 		animation-fill-mode: forwards;
 		animation: smallToBig 1s ease 1;
+		overflow-y: hidden;
 	}
 }
 
 @keyframes smallToBig {
   from {width: 100px; height: 50px;}
-  to {width: 70vw;  height: 100vh;}
+  to {width: 100vh;  height: 100vh;}
 }
 
 @keyframes fadeIn {
@@ -109,10 +141,12 @@ p a {
 
 .image-text{
 	display: flex;
+	min-height: 80vh;
 	align-items: center;
 	.image{
 		width: 45%;
 		aspect-ratio: 1/1;
+		mix-blend-mode: difference;
 	}
 	.text{
 		width: 55%;
@@ -137,8 +171,25 @@ p a {
 	margin: 2.5%; 
 }
 
-.underline{
+.home-page *{
+	max-height: 100vh;
+	overflow-y: hidden!important;
+}
+
+.highlights{
+	overflow-y: hidden;
+	overflow-x: auto;
+  white-space: nowrap;
+	position: absolute;
+	top: 0;
 	width: 100%;
-	padding-bottom: 5px;
-	border-bottom: 1px solid $white;
+}
+
+video{	
+	mix-blend-mode: difference;
+	height: 100vh;
+	width: 100%;
+	object-fit: contain;
+	object-position: center;
+	margin-left: 25%;
 }
