--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,26 +28,26 @@ body {
 	text-rendering: optimizeLegibility;
 }
 
-/* width */
-::-webkit-scrollbar {
-	height: 10px;
-}
+// /* width */
+// ::-webkit-scrollbar {
+// 	height: 10px;
+// }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: transparent;
-}
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   background: transparent;
+// }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: $green;
-	border-radius: 25px;
-}
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+//   background: $green;
+// 	border-radius: 25px;
+// }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: $green;
-}
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: $green;
+// }
 
 
 .menu{
@@ -176,19 +176,28 @@ p a {
 	overflow-y: hidden!important;
 }
 
+// .highlights{
+// 	overflow-y: hidden;
+// 	overflow-x: auto;
+//   white-space: nowrap;
+// 	position: absolute;
+// 	top: 0;
+// 	width: 100%;
+// }
+
 .highlights{
-	overflow-y: hidden;
-	overflow-x: auto;
-  white-space: nowrap;
-	position: absolute;
-	top: 0;
-	width: 100%;
+	overflow: hidden;
+}
+
+.highlights *{
+	mix-blend-mode: difference;
+	overflow-x: hidden;
 }
 
 video{	
 	mix-blend-mode: difference;
 	height: 100vh;
-	width: 100%;
+	width: 75%;
 	object-fit: contain;
 	object-position: center;
 	margin-left: 25%;
