--- a/styles/breakpoints.scss
+++ b/styles/breakpoints.scss
@@ -31,10 +31,12 @@
 		width: 100%;
 	}
 	.highlights{
+		overflow-y: scroll!important;
+		padding-bottom: 100px;
 		p{
 			font-size: 16px;
-			background-color: black;
 			padding: 0 10px;
+			top: 85vh;
 		}
 	}
 
