--- a/styles/breakpoints.scss
+++ b/styles/breakpoints.scss
@@ -31,22 +31,9 @@
 		width: 100%;
 	}
 
-	// .home-page *{
-	// 	max-height: 100%;
-	// 	overflow-y: visible!important;
-	// }
-
-	.slick-slide{
-		padding-bottom: 150px;
-		overflow-y: scroll!important;
-	}
-
 	.highlights{
-		padding: 0 10px;
-		overflow-y: hidden;
 		.intro{
-			margin-top: 20vh;
-			overflow-y: hidden;
+			display: none;
 		}
 		p{
 			font-size: 16px;
@@ -54,9 +41,8 @@
 	}
 	.slick-dots{
 		text-align: center;
-		background-color: black;
-		mix-blend-mode: normal;
-		bottom: 0;
+		position: relative;
+		bottom: 100px;
 		padding: 10px 0;
 	}
 }
