--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -246,7 +246,7 @@ video{
 }
 
 .projects{
-	margin-top: 48px;
+	margin-top: 64px;
 	padding: 2vw;
 	.project-item{
 		border-bottom: 1px solid $white;
@@ -267,6 +267,11 @@ video{
 			padding: 0;
 			margin: 0;
 			font-size: 24px;
+			&.category{
+				font-size: 14px;
+				line-height: 0.8;
+				color: $green;
+			}
 		}
 		img{
 			position: fixed;
@@ -292,5 +297,68 @@ video{
 				max-width: 50vw;
 			}
 		}
+	}
+}
+
+.hero{
+	display: flex;
+	justify-content: center;
+	height: calc(100vh - 150px)!important;
+	img{
+		height: calc(100vh - 150px)!important;
+		width: 100%!important;
+		object-fit: contain!important;
+	}
+	h1{
+		max-width: 600px;
+		line-height: 1;
+		padding: 2vw 2vw;
+	}
+	span{
+		font-size: 14px;
+		color: $green;
+		margin-left: 4px;
+	}
+	.fixed-info{
+		position: fixed;
+		background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(186,255,0,0) 80%);
+		left: 0;
+		bottom: 0;
+		width: 100%;
+	}
+}
+
+.scroll{
+	position: absolute;
+	right: 2vw;
+	bottom: 5vh;
+	mask-image: url(./SVG/scroll.svg);
+	background-color: $green;
+	width: 50px;
+	height: 100px;
+	mask-size: contain;
+	mask-repeat: no-repeat;
+	mask-position: right;
+	z-index: 9;
+	animation: move 1s linear infinite alternate;
+	cursor: pointer;
+	// &:hover{
+	// 	animation: move 1s linear infinite alternate;
+	// }
+}
+
+@keyframes move {
+  from {bottom: 5vh;}
+  to {bottom: 8vh;}
+}
+
+.content{
+	display: flex;
+	align-items: end;
+	flex-direction: column;
+	padding: 48px 0 100px 0;
+	p{
+		font-size: 20px;
+		max-width: 600px;
 	}
 }
