--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,6 +13,7 @@ html{
 }
 
 body, html{
+	width: 100vw;
 	max-width: 100vw;
 	overflow-x: hidden;
 }
@@ -301,14 +302,28 @@ video{
 }
 
 .hero{
+	height: calc(100vh - 100px);
 	display: flex;
-	justify-content: center;
-	height: calc(100vh - 150px)!important;
+	flex-direction: column;
+	align-items: center;
+	// position: relative;
 	img{
 		height: calc(100vh - 150px);
 		width: auto;
 		max-width: 100%;
 		object-fit: contain;
+	}
+	video{
+		width: auto;
+		max-width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		margin-left: 0;
 	}
 	h1{
 		max-width: 600px;
@@ -332,7 +347,7 @@ video{
 .scroll{
 	position: absolute;
 	right: 2vw;
-	bottom: 5vh;
+	bottom: 0vh;
 	mask-image: url(./SVG/scroll.svg);
 	background-color: $green;
 	width: 50px;
@@ -349,15 +364,15 @@ video{
 }
 
 @keyframes move {
-  from {bottom: 5vh;}
-  to {bottom: 8vh;}
+  from {bottom: 0vh;}
+  to {bottom: 4vh;}
 }
 
 .content{
 	display: flex;
 	align-items: end;
 	flex-direction: column;
-	padding: 48px 0 100px 0;
+	margin: 24px 0 100px 0;
 	p{
 		font-size: 20px;
 		max-width: 600px;
