--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -397,6 +397,7 @@ video{
 	flex-direction: column;
 	margin: 48px 0 100px 0;
 	position: relative;
+	padding-bottom: 200px;
 	p{
 		font-size: 20px;
 		max-width: 600px;
