--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -428,6 +428,8 @@ video{
 .loading-txt{
 	margin-top: 14px;
 	animation: loading 1.2s linear infinite alternate;
+	text-transform: uppercase;
+	font-size: 13px;
 }
 
 @keyframes loading {
@@ -441,10 +443,10 @@ video{
 
 .loader {
 	position: relative;
-	width: 200px;
-	height: 200px;
+	width: 80px;
+	height: 80px;
 	border-radius: 50%;
-	background: linear-gradient($green, $white);
+	background: linear-gradient($green, rgb(72,75,181), rgb(255, 78, 214));
 	animation: animate 1.2s linear infinite;
 }
 
@@ -462,7 +464,7 @@ video{
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
-	background: linear-gradient($green, $white);
+	background: linear-gradient($green, rgb(72,75,181), rgb(255, 78, 214));
 }
 
 .loader span:nth-child(1) {
